Зделал разметку Header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title> Gllacy Shop</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+  <header class="main-header">
+    <div class="header-logo">
+      <img src="img/logo" alt="Логотип">
+    </div>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка и оплата</a></li>
+        <li><a href="#">О компании</a></li>
+      </ul>
+    </nav>
+    <div class="header-search"></div>
+    <ul class="user-block">
+      <li><a href="#">Вход</a></li>
+      <li><a href="#">Пусто</a></li>
+    </ul>
+    <div class="information">
+      <p class="work-time">
+        С 10 до 20, ежедневно
+      </p>
+      <p class="phone-number">
+        8 812 450-25-25
+      </p>
+    </div>
+  </header>
   </body>
 </html>
