До разметил Header

--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
   <body>
   <header class="main-header">
     <div class="header-logo">
-      <img src="img/logo" alt="Логотип">
+      <img src="img/logo.png" alt="Логотип">
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Доставка и оплата</a></li>
-        <li><a href="#">О компании</a></li>
+        <li>
+          <a href="#">Каталог</a>
+        </li>
+        <li>
+          <a href="#">Доставка и оплата</a>
+        </li>
+        <li>
+          <a href="#">О компании</a>
+        </li>
       </ul>
     </nav>
     <div class="header-search"></div>
     <ul class="user-block">
-      <li><a href="#">Вход</a></li>
-      <li><a href="#">Пусто</a></li>
+      <li>
+      <a class="icon-login" href="#">Вход</a>
+      </li>
+      <li>
+      <a class="icon-basket" href="#">Пусто</a>
+      </li>
     </ul>
     <div class="information">
       <p class="work-time">
@@ -29,6 +39,22 @@
         8 812 450-25-25
       </p>
     </div>
+    <section class="slider">
+      <div class="container">
+        <div class="slider-title">
+          Крем-брюле и пломбир
+          с малиновым джемом
+        </div>
+        <div class="slider-btn">
+          <a class="btn" href="#">Давайте оба!</a>
+        </div>
+        <div class="slider-controls">
+          <div class="slider-controls-dot"></div>
+          <div class="slider-controls-dot"></div>
+          <div class="slider-controls-dot"></div>
+        </div>
+      </div>
+    </section>
   </header>
   </body>
 </html>
