Разметил секцию Angebot

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </nav>
     <div class="header-search">
       <form action="#" class="search-form">
-        <input class="search" type="search" name="search">
-        <input class="" type="text">
+        <input class="search-field" type="text">
+        <input class="search-submit" type="submit">
       </form>
     </div>
     <ul class="user-block">
@@ -115,5 +115,27 @@
       </div>
     </section>
   </header>
+  <main class="container">
+    <section class="angebot">
+      <div class="angebot-item">
+        <img src="img/angebot-img" alt="herber">
+        <h2 class="angebot-title">Малинка даром!</h2>
+          <p class="angebot-description">
+            При покупке 2 кг любого фруктового мороженого,
+            добавим в ваш заказ банку малинового варенья бесплатно.
+          </p>
+        <a class="btn" href="#">Хочу варенье!</a>
+      </div>
+      <div class="angebot-item">
+        <img src="img/angebot-img2" alt="chocolate">
+        <h2 class="angebot-title">Шоколадки даром!</h2>
+        <p class="angebot-description">
+          При покупке 2 кг пломбира,
+          добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
+        </p>
+        <a class="btn" href="#">Хочу шоколадки!</a>
+      </div>
+    </section>
+  </main>
   </body>
 </html>
