Испаривил разметку. Доразметил секцию продукты

--- a/index.html
+++ b/index.html
@@ -116,24 +116,67 @@
     </section>
   </header>
   <main class="container">
-    <section class="angebot">
-      <div class="angebot-item">
-        <img src="img/angebot-img" alt="herber">
-        <h2 class="angebot-title">Малинка даром!</h2>
-          <p class="angebot-description">
+    <section class="action">
+      <div class="action-item">
+        <h2 class="action-title">Малинка даром!</h2>
+          <p class="action-description">
             При покупке 2 кг любого фруктового мороженого,
             добавим в ваш заказ банку малинового варенья бесплатно.
           </p>
         <a class="btn" href="#">Хочу варенье!</a>
       </div>
-      <div class="angebot-item">
-        <img src="img/angebot-img2" alt="chocolate">
-        <h2 class="angebot-title">Шоколадки даром!</h2>
-        <p class="angebot-description">
+      <div class="action-item">
+        <h2 class="action-title">Шоколадки даром!</h2>
+        <p class="action-description">
           При покупке 2 кг пломбира,
           добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
         </p>
         <a class="btn" href="#">Хочу шоколадки!</a>
+      </div>
+    </section>
+    <section class="products">
+      <div class="products-item">
+        <img src="products-img" alt="ice-cream">
+        <span class="bestseller">Хит</span>
+        <p class="price-products">
+          310    /<span class="products-kg">кг</span>
+        </p>
+        <p class="products-description">
+          Сливочное с апельсиновым
+          джемом и цитрусовой стружкой
+        </p>
+      </div>
+      <div class="products-item">
+        <img src="products-img2" alt="ice-cream2">
+        <span class="bestseller">Хит</span>
+        <p class="price-products">
+          380    /<span class="products-kg">кг</span>
+        </p>
+        <p class="products-description">
+          Сливочно-кофейное с кусочками шоколада
+        </p>
+      </div>
+      <div class="products-item">
+        <img src="products-img3" alt="ice-cream3">
+        <span class="bestseller">Хит</span>
+        <p class="price-products">
+          355    /<span class="products-kg">кг</span>
+        </p>
+        <p class="products-description">
+          Сливочно-клубничное с
+          присыпкой из белого шоколада
+        </p>
+      </div>
+      <div class="products-item">
+        <img src="products-img4" alt="ice-cream4">
+        <span class="bestseller">Хит</span>
+        <p class="price-products">
+          415    /<span class="products-kg">кг</span>
+        </p>
+        <p class="products-description">
+          Сливочное крем-брюле с
+          карамельной подливкой
+        </p>
       </div>
     </section>
   </main>
