--- a/index.html
+++ b/index.html
@@ -224,30 +224,30 @@
     </div>
     <section class="maps">
       <img src="img/map" alt="map">
+      <div class="contacts">
+        <p>Адрес главного офиса и офлайн магазина</p>
+        <b class="contacts-adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
+        <p>
+          Для заказов по телефону:
+        </p>
+        <b class="contacts-adress">
+          8 812 450-25-25
+        </b>
+        <p>
+          (с 10 до 20 ежедневно)
+        </p>
+        <a class="btn" href="#">Форма обратной связи</a>
+      </div>
     </section>
-    <div class="contacts">
-      <p>Адрес главного офиса и офлайн магазина</p>
-      <b class="contacts-adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
-      <p>
-        Для заказов по телефону:
-      </p>
-      <b class="contacts-adress">
-        8 812 450-25-25
-      </b>
-      <p>
-        (с 10 до 20 ежедневно)
-      </p>
-      <a class="btn" href="#">Форма обратной связи</a>
-    </div>
   </main>
   <footer class="main-footer">
-    <section class="social">
+    <div class="social">
       <a href="#" class="social-link">Twiter</a>
       <a href="#" class="social-link">Instagram</a>
       <a href="#" class="social-link">Facebook</a>
       <a href="#" class="social-link">Vk</a>
-    </section>
-    <section class="about">
+    </div>
+    <div class="about">
       <ul class="about-list">
         <li class="abous-item iconed">
           <a href="#">Для поставщиков</a>
@@ -262,13 +262,13 @@
           <a href="#">Экологические стандарты</a>
         </li>
       </ul>
-    </section>
-    <section class="author">
+    </div>
+    <div class="author">
       <div class="footer-logo">
         <img src="img/footer-logo" alt="footer-logo">
       </div>
       <a href="#">Сделано в HTML Academy © 2017</a>
-    </section>
+    </div>
   </footer>
   </body>
 </html>
