Забыл зделать Container

--- a/index.html
+++ b/index.html
@@ -241,33 +241,35 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="social">
-      <a href="#" class="social-link">Twiter</a>
-      <a href="#" class="social-link">Instagram</a>
-      <a href="#" class="social-link">Facebook</a>
-      <a href="#" class="social-link">Vk</a>
-    </div>
-    <div class="about">
-      <ul class="about-list">
-        <li class="abous-item iconed">
-          <a href="#">Для поставщиков</a>
-        </li>
-        <li class="abous-item">
-          <a href="#">О производстве</a>
-        </li>
-        <li class="abous-item">
-          <a href="#">Наши документы</a>
-        </li>
-        <li class="abous-item">
-          <a href="#">Экологические стандарты</a>
-        </li>
-      </ul>
-    </div>
-    <div class="author">
-      <div class="footer-logo">
-        <img src="img/footer-logo" alt="footer-logo">
+    <div class="container">
+      <div class="social">
+        <a href="#" class="social-link">Twiter</a>
+        <a href="#" class="social-link">Instagram</a>
+        <a href="#" class="social-link">Facebook</a>
+        <a href="#" class="social-link">Vk</a>
       </div>
-      <a href="#">Сделано в HTML Academy © 2017</a>
+      <div class="about">
+        <ul class="about-list">
+          <li class="abous-item iconed">
+            <a href="#">Для поставщиков</a>
+          </li>
+          <li class="abous-item">
+            <a href="#">О производстве</a>
+          </li>
+          <li class="abous-item">
+            <a href="#">Наши документы</a>
+          </li>
+          <li class="abous-item">
+            <a href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </div>
+      <div class="author">
+        <div class="footer-logo">
+          <img src="img/footer-logo" alt="footer-logo">
+        </div>
+        <a href="#">Сделано в HTML Academy © 2017</a>
+      </div>
     </div>
   </footer>
   </body>
