Забыл зделать выпадашку в навигации

--- a/catalog.html
+++ b/catalog.html
@@ -266,7 +266,7 @@
     <div class="paginator">
       <ul class="paginator-list">
         <li class="paginator-item paginator-item-prev">
-          <a class="paginator-link " href="#"></a>
+          <a class="paginator-link " href="#">Prev</a>
         </li>
         <li class="paginator-item">
           <a class="paginator-link" href="#">1</a>
@@ -284,7 +284,7 @@
           <a class="paginator-link" href="#">5</a>
         </li>
         <li class="paginator-item paginator-item-next">
-          <a class="paginator-link " href="#"></a>
+          <a class="paginator-link " href="#">Next</a>
         </li>
       </ul>
     </div>
