--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
         <ul class="navigation-list">
           <li class="navigation-item navigation-item--current">
             <a class="navigation-link" href="catalog.html">Каталог</a>
+            <ul class="dropdown-list">
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Новинки</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Сливочное</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Щербеты</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Фруктовый лед</a>
+              </li>
+              <li class="dropdown-item">
+                <a class="dropdown-link" href="#">Мелорин</a>
+              </li>
+            </ul>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка и оплата</a>
