Добавил картинки, зделал таблицу стилей

--- a/catalog.html
+++ b/catalog.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Gllacy Shop</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -165,7 +167,7 @@
     <h1 class="heading-title">Сливочное мороженое</h1>
     <section class="products">
       <div class="products-item">
-        <img src="products-img" alt="ice-cream">
+        <img src="img/products-img.png" width="267" height="267" alt="products-img">
         <p class="price-products">
           кг<span class="products-kg">310/</span>
         </p>
@@ -175,7 +177,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img2" alt="ice-cream2">
+        <img src="img/products-img2.png" width="267" height="267" alt="products-img2">
         <p class="price-products">
           кг<span class="products-kg">380/</span>
         </p>
@@ -184,7 +186,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img3" alt="ice-cream3">
+        <img src="img/products-img3.png" width="267" height="267" alt="products-img3">
         <p class="price-products">
           кг<span class="products-kg">355/</span>
         </p>
@@ -194,7 +196,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img4" alt="ice-cream4">
+        <img src="img/products-img4.png" width="267" height="267" alt="products-img4">
         <p class="price-products">
           кг<span class="products-kg">415/</span>
         </p>
@@ -204,7 +206,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img5" alt="ice-cream">
+        <img src="img/products-img5.png" width="267" height="267" alt="products-img5">
         <p class="price-products">
           кг<span class="products-kg">325/</span>
         </p>
@@ -213,7 +215,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img6" alt="ice-cream2">
+        <img src="img/products-img6.png" width="267" height="267" alt="products-img6">
         <p class="price-products">
           кг<span class="products-kg">410/</span>
         </p>
@@ -223,7 +225,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img7" alt="ice-cream3">
+        <img src="img/products-img7.png" width="267" height="267" alt="products-img7">
         <p class="price-products">
           кг<span class="products-kg">375/</span>
         </p>
@@ -233,7 +235,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img8" alt="ice-cream4">
+        <img src="img/products-img8.png" width="267" height="267" alt="products-img8">
         <p class="price-products">
           кг<span class="products-kg">320/</span>
         </p>
@@ -242,7 +244,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img9" alt="ice-cream">
+        <img src="img/products-img9.png" width="267" height="267" alt="products-img9">
         <p class="price-products">
           кг<span class="products-kg">440/</span>
         </p>
@@ -252,7 +254,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img10" alt="ice-cream2">
+        <img src="img/products-img10.png" width="267" height="267" alt="products-img10">
         <p class="price-products">
           кг<span class="products-kg">435/</span>
         </p>
@@ -261,7 +263,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img11" alt="ice-cream3">
+        <img src="img/products-img11.png" width="267" height="267" alt="products-img11">
         <p class="price-products">
           кг<span class="products-kg">355/</span>
         </p>
@@ -270,7 +272,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img12" alt="ice-cream4">
+        <img src="img/products-img12.png" width="267" height="267" alt="products-img12">
         <p class="price-products">
           кг<span class="products-kg">420/</span>
         </p>
