--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title> Gllacy Shop</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
   <header class="main-header">
@@ -155,7 +157,7 @@
     </section>
     <section class="products">
       <div class="products-item">
-        <img src="products-img" alt="ice-cream">
+        <img src="img/products-img.png" width="267" height="267" alt="products-img">
         <span class="bestseller">Хит</span>
         <p class="price-products">
           кг<span class="products-kg">310/</span>
@@ -166,7 +168,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img2" alt="ice-cream2">
+        <img src="img/products-img2.png" width="267" height="267" alt="products-img2">
         <span class="bestseller">Хит</span>
         <p class="price-products">
           кг<span class="products-kg">380/</span>
@@ -176,7 +178,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img3" alt="ice-cream3">
+        <img src="img/products-img3.png" width="267" height="267" alt="products-img3">
         <span class="bestseller">Хит</span>
         <p class="price-products">
           кг<span class="products-kg">355/</span>
@@ -187,7 +189,7 @@
         </p>
       </div>
       <div class="products-item">
-        <img src="products-img4" alt="ice-cream4">
+        <img src="img/products-img4.png" width="267" height="267" alt="products-img4">
         <span class="bestseller">Хит</span>
         <p class="price-products">
           кг<span class="products-kg">415/</span>
