Добавил доступность в сайт

--- a/catalog.html
+++ b/catalog.html
@@ -48,47 +48,47 @@
         </li>
         <li class="user-block-item">
           <a class="icon-basket" href="#">Пусто</a>
-          <table class="table-basket">
-            <tr>
-              <td>
-                <a class="delete" href="#">X</a>
-              </td>
-              <td>
-                <img src="img/ice-cream-small" alt="ice-cream">
-              </td>
-              <td>
-                <p>Пломбир с апельсиновым джемом</p>
-              </td>
-              <td>
-                <p>1,5кг x<span class="price">200 руб</span></p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a class="delete" href="#">X</a>
-              </td>
-              <td>
-                <img src="img/ice-cream-small2" alt="ice-cream2">
-              </td>
-              <td>
-                <p>Клубничный пломбир с присыпкой из
-                  белого </p>
-              </td>
-              <td>
-                <p>1,5 кг x <span class="price">200 руб</span></p>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4">
-                <b class="total-price">Итого: 750 руб</b>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4">
-                <a class="btn" href="#">Оформить заказ</a>
-              </td>
-            </tr>
-          </table>
+         <table class="table-basket">
+          <tr>
+            <td>
+              <button class="delete" href="#">Убрать</button>
+            </td>
+            <td>
+              <img src="img/ice-cream-small" alt="ice-cream">
+            </td>
+            <td>
+              <p>Пломбир с апельсиновым джемом</p>
+            </td>
+            <td>
+              <p>1,5кг x<span class="price">200 руб</span></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <button class="delete" href="#">Убрать</button>
+            </td>
+            <td>
+              <img src="img/ice-cream-small2" alt="ice-cream2">
+            </td>
+            <td>
+              <p>Клубничный пломбир с присыпкой из
+                белого </p>
+            </td>
+            <td>
+              <p>1,5 кг x <span class="price">200 руб</span></p>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <b class="total-price">Итого: 750 руб</b>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <a class="btn" href="#">Оформить заказ</a>
+            </td>
+          </tr>
+        </table>
         </li>
       </ul>
       <div class="information">
