--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <table class="table-basket">
             <tr>
               <td>
-                <a class="delete" href="#">X</a>
+                <button class="delete" href="#">Убрать</button>
               </td>
               <td>
                 <img src="img/ice-cream-small" alt="ice-cream">
@@ -82,7 +82,7 @@
             </tr>
             <tr>
               <td>
-                <a class="delete" href="#">X</a>
+                <button class="delete" href="#">Убрать</button>
               </td>
               <td>
                 <img src="img/ice-cream-small2" alt="ice-cream2">
