Исправил ошибку по доступности

--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
          <table class="table-basket">
           <tr>
             <td>
-              <button class="delete" href="#">Убрать</button>
+              <a class="delete" href="#">Убрать</a>
             </td>
             <td>
               <img src="img/ice-cream-small" alt="ice-cream">
@@ -65,7 +65,7 @@
           </tr>
           <tr>
             <td>
-              <button class="delete" href="#">Убрать</button>
+              <a class="delete" href="#">Убрать</a>
             </td>
             <td>
               <img src="img/ice-cream-small2" alt="ice-cream2">
@@ -333,7 +333,10 @@
       </div>
       <div class="author">
         <div class="footer-logo">
-          <img src="img/footer-logo" alt="footer-logo">
+          <a href="https://htmlacademy.ru/">
+            <img src="img/footer-logo" alt="footer-logo">
+            Логотип html academy
+          </a>
         </div>
         <a href="#">Сделано в HTML Academy © 2017</a>
       </div>
