--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <table class="table-basket">
             <tr>
               <td>
-                <button class="delete" href="#">Убрать</button>
+                <a class="delete" href="#">Убрать</a>
               </td>
               <td>
                 <img src="img/ice-cream-small" alt="ice-cream">
@@ -82,7 +82,7 @@
             </tr>
             <tr>
               <td>
-                <button class="delete" href="#">Убрать</button>
+                <a class="delete" href="#">Убрать</a>
               </td>
               <td>
                 <img src="img/ice-cream-small2" alt="ice-cream2">
@@ -285,7 +285,10 @@
       </div>
       <div class="author">
         <div class="footer-logo">
-          <img src="img/footer-logo" alt="footer-logo">
+          <a href="https://htmlacademy.ru/">
+            <img src="img/footer-logo" alt="footer-logo">
+            Логотип html academy
+          </a>
         </div>
         <a href="#">Сделано в HTML Academy © 2017</a>
       </div>
