--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             Логотип html academy
           </a>
         </div>
-        <a href="#">Сделано в HTML Academy © 2017</a>
+        <a href="https://htmlacademy.ru/">Сделано в HTML Academy © 2017</a>
       </div>
     </div>
   </footer>
