--- a/catalog.html
+++ b/catalog.html
@@ -338,7 +338,7 @@
             Логотип html academy
           </a>
         </div>
-        <a href="#">Сделано в HTML Academy © 2017</a>
+        <a href="https://htmlacademy.ru/">Сделано в HTML Academy © 2017</a>
       </div>
     </div>
   </footer>
